# dodo

./: .gitignore  Cargo.toml  Makefile  README.md  test.sh
.github/workflows/: audit.yml  default.yml
src/: cli.rs  data.rs  error.rs  main.rs  result.rs  shellinfo.rs  text.rs
src/cli/: about.rs  add.rs  bark.rs  config.rs  delete.rs  list.rs  remove.rs  run.rs  save.rs
src/data/: command.rs  config.rs
src/text/: color.rs  font.rs
