[package]
name = "dodo"
version = "0.2.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.23", default-features = false, features = [
  "std",
  "help",
  "suggestions",
  "usage",
  "derive",
] }
rayon = { version = "1.10.0", default-features = false }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = { version = "1.0.134", default-features = false, features = [
  "std",
] }
sysinfo = { version = "0.33.1", default-features = false, features = [
  "system",
] }

[dev-dependencies]
fake = "3.1.0"
rand = "0.8.5"
